--- a/desafios/desafio012/style/cordel.css
+++ b/desafios/desafio012/style/cordel.css
@@ -1,14 +1,20 @@
 @charset "UTF-8";
 @import url('https://fonts.googleapis.com/css2?family=Passion+One:wght@700&family=Sriracha&display=swap');
 
-
+:root{
+    --fonte1:Verdana,Genava, Tahoma, sans-serif;
+    --fonte2:'Passion One', cursive;
+    --fonte3:'Sriracha', cursive;
+}
 *{
     margin: 0px;
     padding:0px;
+    font-size: 1em;
 }
 html,body{
     min-height: 100vh;
     background-color: darkgrey;
+    font-family: var(--fonte1);
 }
 header{
     background-color: black;
@@ -18,6 +24,8 @@ header{
 header > h1{
     padding-top: 50px;
     font-variant: small-caps;
+    font-family: var(--fonte2);
+    font-size:10vw;
 }
 header > p{
     padding-bottom: 50px;
@@ -33,8 +41,10 @@ header a:hover, footer a:hover{
 section{
     padding-top: 10vh;
     padding-bottom: 10vh;
-    line-height: 2rem;
+    line-height: 2em;
     padding-left: 30px;
+    font-family: var(--fonte3);
+    font-size: 3.5vw;
 }
 section.normal{
     background-color: white;
@@ -45,7 +55,8 @@ section.imagem{
     color: white;
 }
 section.imagem > p{
-    width: 400px;
+    display: inline-block;
+    padding: 5px;
     background-color: rgba(0, 0, 0, 0.466);
 
 }
